--- a/_src/pug/modules/_header.pug
+++ b/_src/pug/modules/_header.pug
@@ -1,6 +1,6 @@
 header.header#header
   .header__inner.container.container--header
-    a.header__link-tel(href="tel:+73952503504") +7 (3952) 503-504
+    a.header__link-tel(href="tel:+73952265-705") +7 (3952) 265-705
 
     .header__logo-wrap
       a.header__logo.logo(href="/index.html")
@@ -38,7 +38,7 @@ header.header#header
 
 
         li.nav__item.nav__item--tel
-          a.nav__link.nav__link--tel(href="tel:+73952503504") +7 (3952) 503-504
+          a.nav__link.nav__link--tel(href="tel:+73952265-705") +7 (3952) 265-705
 
       a.header__link.header__link--close(href="#header-nav")
         span.header__link-text Закрыть меню
