--- a/_src/pug/pages/index.pug
+++ b/_src/pug/pages/index.pug
@@ -6,7 +6,7 @@ block content
 
   section.promo
     .promo__img-wrap
-      +img-retina(`promo-bg`, `jpg`,`интерьер`,`promo__img`, `1920`,`965`,360, 412, 768, 1200, 1440)
+      +img-retina(`promo-bg`, `jpg`,`интерьер`,`promo__img`, `1920`,`965`,360, 412, 767, 768, 1200, 1440)
 
     .promo__inner
       h2.promo__title Поможем
@@ -408,7 +408,7 @@ block content
               a.social__link(href="viber://chat?number=89500634939" aria-label="viber" target="_blank" rel="noopener")
                 +svg('viber', 40, 40,'social' )
             li.social__item
-              a.social__link(href="https://api.whatsapp.com/send?phone=89500634939" aria-label="" target="_blank" rel="noopener")
+              a.social__link(href="https://api.whatsapp.com/send?phone=+79500634939" aria-label="" target="_blank" rel="noopener")
                 +svg('whatsapp', 40, 40,'social' )
             li.social__item
               a.social__link(href="https://tttttt.me/mir_mebely" aria-label="telegramm" target="_blank" rel="noopener")
