--- a/_src/css/style.css
+++ b/_src/css/style.css
@@ -1590,7 +1590,8 @@ button {
         background-image: linear-gradient(0deg, #36544F, #36544F), linear-gradient(0deg, #718753, #718753);
         position: relative;
         padding-top: 36px;
-        padding-bottom: 36px; } }
+        padding-bottom: 36px;
+        display: none; } }
   .header__link {
     font-size: 0;
     display: none; }
@@ -1946,6 +1947,9 @@ button {
   background-image: -o-linear-gradient(bottom, #36544F, #36544F), -o-linear-gradient(bottom, #718753, #718753);
   background-image: linear-gradient(0deg, #36544F, #36544F), linear-gradient(0deg, #718753, #718753);
   overflow-y: auto; }
+  @media screen and (max-width: 1000px) {
+    .mm-ocd__content .header__nav {
+      display: block; } }
 
 .mm-ocd__backdrop {
   display: none; }
@@ -3913,6 +3917,12 @@ button {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center; }
+    @media screen and (max-width: 412px) {
+      .modal__inner {
+        height: 100%;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center; } }
   .modal__title {
     font-size: 20px;
     line-height: 20px;
@@ -4386,8 +4396,7 @@ button {
       padding-left: 0; } }
   @media screen and (max-width: 1200px) {
     .projects {
-      min-height: 1011px;
-      display: block; } }
+      min-height: 1011px; } }
   @media screen and (max-width: 768px) {
     .projects {
       background-image: none; } }
@@ -4488,18 +4497,33 @@ button {
     max-width: 548px;
     padding-top: 28px;
     padding-bottom: 28px;
-    -webkit-transition: 0.3s;
-    -o-transition: 0.3s;
-    transition: 0.3s;
+    -webkit-transition: background-color 0.3s;
+    -o-transition: background-color 0.3s;
+    transition: background-color 0.3s;
     margin-left: auto;
     margin-right: auto; }
     .projects__link:hover, .projects__link:focus {
       background-color: rgba(175, 124, 56, 0.8); }
     @media screen and (max-width: 1440px) {
       .projects__link {
-        margin-left: 22%; } }
+        margin-left: 0;
+        margin-right: 0;
+        position: relative;
+        left: 50%;
+        -webkit-transform: translateX(calc(-50% - 80px));
+            -ms-transform: translateX(calc(-50% - 80px));
+                transform: translateX(calc(-50% - 80px)); } }
+    @media screen and (max-width: 1200px) {
+      .projects__link {
+        -webkit-transform: translateX(calc(-50% - 50px));
+            -ms-transform: translateX(calc(-50% - 50px));
+                transform: translateX(calc(-50% - 50px)); } }
     @media screen and (max-width: 1000px) {
       .projects__link {
+        -webkit-transform: none;
+            -ms-transform: none;
+                transform: none;
+        left: auto;
         max-width: 337px;
         margin-left: auto;
         margin-right: auto;
@@ -5079,9 +5103,12 @@ button {
       padding-left: 0;
       margin-left: auto;
       margin-right: auto; } }
-  @media screen and (max-width: 360px) {
+  @media screen and (max-width: 411px) {
     .scenario {
       max-width: 300px; } }
+  @media screen and (max-width: 320px) {
+    .scenario {
+      max-width: 274px; } }
   .scenario__dt {
     display: none; }
     @media screen and (max-width: 1440px) {
@@ -5115,7 +5142,7 @@ button {
     @media screen and (max-width: 768px) {
       .scenario__title {
         line-height: 38px; } }
-    @media screen and (max-width: 360px) {
+    @media screen and (max-width: 411px) {
       .scenario__title {
         font-size: 28px;
         line-height: 32px; } }
@@ -5436,7 +5463,7 @@ button {
       -webkit-box-align: center;
           -ms-flex-align: center;
               align-items: center;
-      padding-bottom: 69px; } }
+      padding-bottom: 49px; } }
   @media screen and (max-width: 600px) {
     .example-decor {
       padding-top: 96px;
@@ -5445,6 +5472,9 @@ button {
   .example-decor__title {
     line-height: 55px;
     margin-bottom: 65px; }
+    @media screen and (max-width: 768px) {
+      .example-decor__title {
+        margin-bottom: 30px; } }
     @media screen and (max-width: 600px) {
       .example-decor__title {
         font-size: 35px;
@@ -5467,7 +5497,8 @@ button {
       .example-decor__text {
         font-size: 18px;
         line-height: 26px;
-        max-width: 372px; } }
+        max-width: 372px;
+        margin-bottom: 0; } }
     @media screen and (max-width: 412px) {
       .example-decor__text {
         font-size: 16px;
