--- a/_src/sass/blocks/9-examle.scss
+++ b/_src/sass/blocks/9-examle.scss
@@ -93,7 +93,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 69px;
+    padding-bottom: 49px;
   }
 
   @include mw(600px) {
@@ -107,6 +107,10 @@
   &__title {
     line-height: 55px;
     margin-bottom: 65px;
+
+    @include mw($tb) {
+      margin-bottom: 30px;
+    }
 
     @include mw(600px) {
       font-size: 35px;
@@ -135,6 +139,7 @@
       font-size: 18px;
       line-height: 26px;
       max-width: 372px;
+      margin-bottom: 0;
     }
 
     @include mw($ph) {
